# tz-tool

./: CONTEXT.md  INSTALL.md  ROADMAP.md  index.html  make_presentation.py  package-lock.json  package.json  product-status.html  tz-table-prototype.html  tz-tool_guide.html  tz-tool_v0.2_changelog.html  tz-tool_v0.2_roadmap_vs_done.html  vite.config.js
.claude/: settings.local.json
.github/workflows/: build-mac.yml  deploy-web.yml
public/: status.html
src/: App.jsx  HIDDEN_CODE.md  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
