[package]
name = "tz-tool"
version = "0.1.0"
description = "ТЗ Tool — розбір ТЗ для 3D-візуалізації"
authors = []
edition = "2021"

[lib]
name = "tz_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
